trunk/Archive2/38/00289a41423027/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp:2:21: fatal error: lokalita: No such file or directory
 # include <lokalita>
                     ^
compilation terminated.
